# CubeScript

./: CMakeLists.txt
CubeScript/: CMakeLists.txt  CubeScript.cpp  Executor.cpp  Executor.h  Parser.bnf  Result.h  TreeListener.h  script.cbscr
CubeScript/Generate/: CSLexerold.g4  CSParserold.g4  generate.cmd
CubeScript/Generate/.antlr/: CSLexer.interp  CSLexer.java  CSLexer.tokens  CSParser.interp  CSParser.java
CubeScript/Nodes/: Expressions.cpp  Expressions.h  Scope.cpp  Scope.h  Types.h  Variables.cpp  Variables.h
CubeScript/Parser/: CSLexer.cpp  CSLexer.h  CSLexer.interp  CSLexer.tokens  CSParser.cpp  CSParser.h
CubeScript/Tests/: values.cpp
